a4_candy_projects/project_detail: fix dropdown styles & tablist z-index

--- a/adhocracy-plus/assets/scss/components/_tabs.scss
+++ b/adhocracy-plus/assets/scss/components/_tabs.scss
@@ -10,6 +10,7 @@
     border-bottom: 2px solid $brand-primary;
     text-align: center;
     margin-bottom: $spacer * 2;
+    z-index: 3;
 }
 
 .tab {
